color changes and alignment fix

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display&display=swap');
+
+* {
+    font-family: 'Playfair Display', serif;
+}
+
+.heading {
+    font-family: 'Oswald', sans-serif;
+}
+
 .margin-space {
     margin: auto;
     max-width: 1100px;
@@ -289,36 +299,44 @@ SVG Icons - svgicons.sparkk.fr
     margin: 30px 0 10px;
     transition: 0.5s;
 }
+
 .form-container .row100 .inputbox {
     counter-reset: #45f3ff;
 }
-span {
+
+.form-span {
     color: #08e7f7;
 }
+
 .form-container .row100 .inputbox input,
 .form-container .row100 .inputbox .textarea textarea {
     background: transparent;
     padding: 0 10px;
     color: #000;
 }
+
 .form-container .row100 .inputbox .text {
     padding: 0 10px;
     transition: 0.5s;
 }
+
 .form-container .row100 .inputbox input:focus + .text,
 .form-container .row100 .inputbox input:valid + .text {
     top: -35px;
     left: -10px;
 }
+
 .form-container .row100 .inputbox .line {
     height: 2px;
     background: #08e7f7;
     transition: 0.5s;
 }
+
 .form-container .row100 .inputbox input:focus ~ .line,
 .form-container .row100 .inputbox input:valid ~ .line {
     height: 100%;
 }
+
 .form-container .row100 .inputbox .textarea {
     /*  */
     height: 100px;
@@ -330,10 +348,12 @@ span {
     top: -35px;
     left: -10px;
 }
+
 .form-container .row100 .inputbox textarea:focus ~ .line,
 .form-container .row100 .inputbox textarea:valid ~ .line {
     height: 100%;
 }
+
 button[type="submit"] {
     padding: 7px 35px;
     background: #45f3ff;
